# Template-bazel-project

./: .bazelrc  .gitignore  MODULE.bazel  README.md  WORKSPACE
.github/workflows/: main.yml
app/: BUILD  main.cpp
lib/pkg/: BUILD
lib/pkg/api/: pkg.hpp
lib/pkg/inc/: pkg_internal.hpp
lib/pkg/src/: pkg.cpp  pkg_internal.cpp
toolchains/: BUILD
