"""Bazel build and test dependencies."""

# =========================================
# Bazel module dependencies
# =========================================

module(
    name = "app",  # replace with your project name
    version = "0.1.0",  # replace with your version
)

bazel_dep(name = "bazel_skylib", version = "1.4.2")

bazel_dep(name = "rules_platform", version = "0.1.0")
bazel_dep(name = "rules_cc", version = "0.0.10")
bazel_dep(name = "rules_testing", version = "0.6.0")
bazel_dep(name = "googletest", version = "1.14.0.bcr.1", repo_name = "com_google_googletest")
bazel_dep(name = "grpc", version = "1.48.1.bcr.1", repo_name = "com_github_grpc_grpc")
bazel_dep(name = "protobuf", version = "21.7", repo_name = "com_google_protobuf")
bazel_dep(name = "abseil-cpp", version = "20211102.0")
bazel_dep(name = "glog", version = "0.7.1", repo_name="com_github_google_glog")
bazel_dep(name = "google_benchmark", version = "1.8.5")
